[package]
name = "pod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structuralize = { git = "https://www.github.com/verdex/structuralize", version = "0.1.0", tag = "release-0.1.0" }
renounce = { git = "https://www.github.com/verdex/renounce", version = "0.3.0", tag = "release-0.3.0" }